<resources>
    <string name="app_name">SaglikliYasam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ayarlar</string>
    <string name="action_logout">Çıkış Yap</string>
    <string name="action_change_password">Şifre Değiştir</string>


    <string name="menu_home">Adım Takibi</string>
    <string name="menu_gallery">Profil Fotoğrafı Ekle</string>
    <string name="menu_slideshow">Su Takibi</string>
    <string name="menu_settings">Ayarlar</string>

    <string name="change_password_title">Şifre Değiştir</string>
    <string name="current_password">Mevcut Şifre</string>
    <string name="new_password">Yeni Şifre</string>
    <string name="confirm_new_password">Yeni Şifre (Tekrar)</string>
    <string name="update_password">Şifreyi Güncelle</string>
</resources>