<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="tr.com.necatiefeaslan.saglikliyasam.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="tr.com.necatiefeaslan.saglikliyasam.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="tr.com.necatiefeaslan.saglikliyasam.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_change_password"
        android:name="tr.com.necatiefeaslan.saglikliyasam.ui.changepassword.ChangePasswordFragment"
        android:label="@string/action_change_password"
        tools:layout="@layout/fragment_change_password" />
        
    <fragment
        android:id="@+id/nav_settings"
        android:name="tr.com.necatiefeaslan.saglikliyasam.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>